--- a/assets/style.css
+++ b/assets/style.css
@@ -61,18 +61,21 @@ body {
 .home {
   min-height: calc(100vh - 60px);
   height: auto;
-  margin-top: 60px;
+  margin-top: 5%;
   padding: 0 10vw;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .hero-heading {
-  font-size: 5rem;
+  font-size: 5em;
 
   text-transform: capitalize;
-  font-weight: 500;
+
+}
+@media screen and (max-width: 1200px) {
+  .hero-heading {
+    font-size: 2em;
+  }
+
 }
 
 .highlight {
@@ -121,7 +124,7 @@ body {
 
 .intro {
   line-height: 1em;
-  margin-top: 5%;
+  margin-top: 10%;
   text-align: left;
   white-space: nowrap;
   overflow: hidden;
@@ -181,15 +184,12 @@ body {
 }
 
 .btn {
-  padding: 10px 20px;
-  margin-top: 200px;
-  margin-left: 2.5%;
-  text-decoration: none;
+  margin-top: 5%;
   border-radius: 50px;
   background: #1e3df1;
   color: #fff;
   text-transform: capitalize;
-  border: none;
+
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
 
@@ -466,20 +466,14 @@ body {
 }
 /*contact section*/
 .contact {
-  width: 100%;
-
-  padding-top: 80px;
+  width: 90%;
 }
 .contact-container {
-  margin: 150px 0 100px;
   font-size: 2em;
-  width: 80%;
-  padding-left: 20%;
+
   /*display: grid;
     grid-template-columns: 40% 60%;
     grid-gap: 50px;*/
-  display: flex;
-  justify-content: center;
 }
 
 .contact-image {
@@ -493,7 +487,6 @@ body {
   font-size: 1.2rem;
   font-weight: 300;
   line-height: 35px;
-  margin-bottom: 20px;
 }
 
 .social-link {
