--- a/assets/style.css
+++ b/assets/style.css
@@ -85,10 +85,10 @@ body {
 }
 
 .profession {
-  width: fit-content;
+  width: max-content;
 
   margin: 10px 0 20px;
-  margin-left: 30rem;
+  margin-left: 5em;
 
   text-transform: capitalize;
   position: absolute;
@@ -251,16 +251,8 @@ body {
   color: #0097b5;
 }
 
-.portrait-containter {
-  position: relative;
-  max-width: 30%;
-  max-height: 30%;
-  width: auto;
-  height: auto;
+.self-portrait-container{
   overflow: hidden;
-
-  margin: 0;
-  margin-left: 0;
   border: 6px solid #677df9;
   border-radius: 50% !important;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
@@ -308,6 +300,7 @@ body {
   position: relative;
   margin-top: 5%;
 
+
   width: 90%;
 }
 
@@ -325,11 +318,11 @@ body {
 
 .video-wrapper {
   position: relative;
-
+  margin-left: 35%;
   padding-bottom: 56.25%;
   margin-top: 1rem;
   height: 0;
-  overflow: hidden;
+
 }
 .video-wrapper iframe {
   position: absolute;
@@ -428,12 +421,13 @@ body {
 }
 .project {
   padding-top: 80px;
+  align-items: center;
 }
 
 .projects-container {
   position: relative;
   margin-top: 100px;
-  margin-left: 45%;
+  margin-left: 40%;
 }
 
 .pacman-container {
@@ -466,7 +460,8 @@ body {
 }
 /*contact section*/
 .contact {
-  width: 90%;
+  align-items: center;
+
 }
 .contact-container {
   font-size: 2em;
