--- a/assets/style.css
+++ b/assets/style.css
@@ -64,6 +64,7 @@ body {
 
 .home {
   min-height: calc(100vh - 60px);
+  display: flex;
   height: auto;
   margin-top: 5%;
   padding: 0 10vw;
@@ -319,17 +320,22 @@ body {
 
 .video-wrapper {
   position: relative;
-  margin-left: 35%;
-  padding-bottom: 56.25%;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
   margin-top: 1rem;
-  height: 0;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+
 }
 .video-wrapper iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 50%;
-  height: 50%;
+  display: flex;
+
+
+  width: 80%;
+
+
 
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
@@ -362,7 +368,7 @@ body {
 }
 
 .skill {
-  font-size: 2rem;
+  font-size: 2em;
   position: relative;
   color: #8f8f8f;
 
