Added footer, changed resume scaling, fixed resume slider styling
Added designer information in the footer
Changed the fixed resume scaling preset to be set for screens 1050px or less.
modified placement of the slider for responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -240,13 +240,14 @@ ul {
   position: relative;
   padding-top: 5em;
   padding-bottom: 5em;
+
 }
 
 .resume-slider-container {
-  position: absolute;
+  position: fixed;
 
-  margin-right: 50%;
-  margin-top: 20%;
+  margin: auto;
+  margin-top: 30%;
   transform: rotate(-90deg);
   z-index: 90;
 }
