--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,7 @@ ul {
 .skills-container {
   margin-top: 4em;
   margin-bottom: 4em;
+  justify-content: center;
 }
 .framework-icons {
   margin: 1rem;
@@ -240,7 +241,6 @@ ul {
   position: relative;
   padding-top: 5em;
   padding-bottom: 5em;
-
 }
 
 .resume-slider-container {
