--- a/src/App.css
+++ b/src/App.css
@@ -122,8 +122,8 @@
   position: relative;
 
   height: 80vh;
-  margin-bottom: 0;
-  padding-top: 3rem;
+
+  padding-top: 8em;
 }
 
 .home-content {
@@ -143,7 +143,7 @@
 }
 .profile-image {
   border-radius: 45% 55% 2% 98% / 60% 40% 10% 90%;
-  opacity: 0.8;
+  opacity: 60%;
 }
 
 .home-about-section {
@@ -153,7 +153,7 @@
 }
 .home-about-description {
   color: white;
-  padding-top: 1.3rem;
+
   padding-bottom: 0.2rem;
   text-align: center;
 }
@@ -192,7 +192,7 @@
 }
 
 .about-section {
-  padding-top: 1rem;
+  padding-top: 8em;
   color: whitesmoke;
 }
 .about-card {
@@ -242,7 +242,7 @@ ul {
 
 .resume-section {
   position: relative;
-  padding-top: 5em;
+  padding-top: 8em;
   padding-bottom: 5em;
 }
 
@@ -302,8 +302,8 @@ input[type="range"]::-webkit-slider-thumb:hover {
 }
 
 .projects-section {
-  height: 100vh;
-  padding-top: 5em;
+
+  padding-top: 8em;
   padding-bottom: 5em;
   color: white;
 }
